# cartwright

./: .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  LSTM_geo_time_classifier.ipynb  MANIFEST.in  README.md  backupLSTM.ipynb  install_geotimeClassify.sh  load_run_LSTM-model.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.py  tox.ini
cartwright/: CartWrightBase.py  CartwrightBase.py  CategoryBases.py  LSTM.py  categorize.py  category_helpers.py  generate_training_data.py  schemas.py  space_resolution.py  time_resolution.py  train_cartwright.py  utils.py
datasets/: city.csv  country_lookup.csv  county_cc_c_number.csv  datesToBeDeleted.csv  small_test.csv
docs/: README.md  _config.yaml  categories.md  contributing.md  geospatial_resolution.md  index.md  installation.md  methodology.md  temporal_resolution.md  usage.md
examples/: Data-Generator.ipynb  Example.ipynb  example_1.csv  example_2.csv  example_3.csv  example_4.csv  schema_examples.ipynb
geotime_classify/: geotime_classify.py  geotime_classify_backup.py  geotime_schema.py  time_resolution.py  utilities.py
misc/: environment.yaml
models/: LSTM_RNN_Geotime_Classify_v1.pth  LSTM_RNN_Geotime_Classify_v_0.01.pth  LSTM_RNN_Geotime_Classify_v_0.02.pth  LSTM_RNN_Geotime_Classify_v_0.03.pth  LSTM_RNN_Geotime_Classify_v_0.04.pth  LSTM_RNN_Geotime_Classify_v_0.05.pth  LSTM_RNN_Geotime_Classify_v_0.06.pth  LSTM_RNN_classifier_model_5.pth  linear_RNN_classifier.pth  linear_RNN_classifier_model.pth
tests/: helpers.py  test_dates.py  test_geos.py  utils.py  (+8 more)
(+71 files in other folders)
