[tool.poetry]
name = "cartwright"
version = "0.0.1"
description = "A recurrent neural network paired with heuristic methods that automatically infer geospatial, temporal and feature columns"
authors = ["Kyle Marsh <kyle@jataware.com>", "David Samson <david@jataware.com>", "Brandon Rose <brandon@jataware.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
arrow = "1.0.3"
fuzzywuzzy = "0.18.0"
numpy = ">=1.19"
scipy = ">=1.5"
pandas = ">=1.1"
joblib = "1.0.1"
torch = ">=1.8"
torchvision = ">=0.9"
pydantic = "1.8.2"
python-levenshtein = "0.20.7"
faker = ">=14.0"

[tool.poetry.dev-dependencies]
bump2version = "1.0.1"
poetry = "1.2.2"
pytest = "7.0.0"
pytest-cov = "4.0.0"
tox = "3.26.0"
tox-conda = "0.9.2"
twine = "3.3.0"

[tool.poetry.scripts]
cartwright = "cartwright.categorize:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
